force-app/main/default/objects/Invoice__c/fields/Transaction_Type_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Purchase__c</fullName>
    <label>Transaction Type (Purchase)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased from Hangyo</fullName>
            </value>
            <value>
                <fullName>Purchased from Super Stockist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>