force-app/main/default/objects/Invoice__c/fields/Transaction_Type_Sale__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Sale__c</fullName>
    <label>Transaction Type (Sale)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale to Under S</fullName>
            </value>
            <value>
                <fullName>Sale to Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>