force-app/main/default/objects/Invoice__c/fields/Transport_Distance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Distance__c</fullName>
    <inlineHelpText>KM</inlineHelpText>
    <label>Transport Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>