force-app/main/default/objects/Invoice__c/fields/Transport_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transport_Mode__c</fullName>
    <label>Transport Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>