force-app/main/default/objects/Invoice__c/fields/Transporter_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Doc_Date__c</fullName>
    <label>Transporter Doc Date</label>
    <type>Date</type>
</CustomField>