force-app/main/default/objects/Invoice__c/fields/Transporter_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Doc_Number__c</fullName>
    <label>Transporter Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>