force-app/main/default/objects/Invoice__c/fields/Transporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Transporter_ID__c</fullName>
    <description>Stores the 15 digit transporter ID for the EWay Bill Integration</description>
    <label>Transporter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>