force-app/main/default/objects/Invoice__c/fields/Transporter_Name__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Name__c</fullName>
    <label>Transporter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>