force-app/main/default/objects/Invoice__c/fields/Under_SS__c.field-meta.xml
<CustomField>
    <fullName>Under_SS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under SS</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Under SS)</relationshipLabel>
    <relationshipName>UnderSS</relationshipName>
    <type>Lookup</type>
</CustomField>