force-app/main/default/objects/Invoice__c/fields/Under_SS_Code__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Code__c</fullName>
    <formula>Under_SS__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under SS Code</label>
    <type>Text</type>
</CustomField>