force-app/main/default/objects/Invoice__c/fields/Under_SS_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_GSTIN__c</fullName>
    <formula>Under_SS__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under SS GSTIN</label>
    <type>Text</type>
</CustomField>