force-app/main/default/objects/Invoice__c/fields/Under_SS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under SS Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Invoices (Under SS Invoice)</relationshipLabel>
    <relationshipName>UnderSSInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>