force-app/main/default/objects/Invoice__c/fields/Value_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Value_Scheme__c</fullName>
    <formula>Order__r.Value_Scheme_Applied__r.Name</formula>
    <label>Value Scheme</label>
    <type>Text</type>
</CustomField>