force-app/main/default/objects/Invoice__c/fields/Value_Scheme_Applied__c.field-meta.xml
<CustomField>
    <fullName>Value_Scheme_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Scheme Applied</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>