force-app/main/default/objects/Invoice__c/fields/Value_Scheme_Discount__c.field-meta.xml
<CustomField>
    <fullName>Value_Scheme_Discount__c</fullName>
    <label>Value Scheme Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>