force-app/main/default/objects/Invoice__c/recordTypes/Primary_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Primary_Invoice</fullName>
    <active>true</active>
    <description>This record type will be used to manage Primary Invoices</description>
    <label>Primary Invoice</label>
</RecordType>