force-app/main/default/objects/Invoice__c/recordTypes/Secondary_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Invoice</fullName>
    <active>true</active>
    <description>This record type will be used to manage Secondary Invoices</description>
    <label>Secondary Invoice</label>
</RecordType>