force-app/main/default/objects/Invoice__c/recordTypes/Secondary_Invoice_Under_SS.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Invoice_Under_SS</fullName>
    <active>true</active>
    <label>Secondary Invoice Under SS</label>
</RecordType>