force-app/main/default/objects/Invoice__c/validationRules/Cannot_move_status_to_delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_move_status_to_delivered</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Status__c) == &apos;Delivered&apos; ,
    TEXT(PRIORVALUE(Status__c)) != &apos;Confirmed&apos;,
    ISCHANGED(Status__c) 
   )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please mark the status as &apos;Confirmed&apos; before setting it to &apos;Delivered&apos;</errorMessage>
</ValidationRule>