force-app/main/default/objects/Invoice__c/validationRules/Restrict_Edit_of_Invoice_Name_by_DMS.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Edit_of_Invoice_Name_by_DMS</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; $Profile.Name = &quot;DMS Partner Community Custom&quot;</errorConditionFormula>
    <errorMessage>You are not allowed to edit the Invoice Number.</errorMessage>
</ValidationRule>