force-app/main/default/objects/Invoice__c/listViews/Counter_Invoices.listView-meta.xml
<ListView>
    <fullName>Counter_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>equals</operation>
        <value>Counter Invoice</value>
    </filters>
    <label>Counter Invoices</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>