force-app/main/default/objects/Invoice__c/listViews/Overdue_Invoices.listView-meta.xml
<ListView>
    <fullName>Overdue_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Retailer_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Collected_Amount__c</columns>
    <columns>Total_Payable_Balance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Secondary_Invoice</value>
    </filters>
    <label>Overdue Invoices</label>
</ListView>